--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Foco';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Foco'), url('/src/assets/fonts/FOCO.woff') format('woff');
+}
+
+
+@font-face {
+  font-family: 'Foco Bold';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Foco Bold'), url('/src/assets/fonts/FOCOBOLD.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Raleway'), url('/src/assets/fonts/Raleway-Regular.ttf') format('ttf');
+}
